tests/machine/x/php/fun_expr_in_let.php
<?php
$square = function($x) { return $x * $x; };
var_dump($square(6));
?>
